--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,19 +2,32 @@
   "name": "gotoroom-server",
   "version": "0.0.1",
   "main": "index.js",
+  "scripts": {
+    "start": "tsc && npm run serve",
+    "serve": "node dist",
+    "dev": "tsc-watch --project . --outDir ./dist --onSuccess \"nodemon ./dist\"",
+    "lint": "tslint src/**/*.ts --fix"
+  },
   "repository": "https://github.com/junhoyeo/gotoroom-server",
-  "author": "JunhoYeo <32605822+JunhoYeo@users.noreply.github.com>",
+  "author": "JunhoYeo  <32605822+JunhoYeo@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.7.13"
+    "mongoose": "^5.7.13",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.32",
+    "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.14",
+    "nodemon": "^2.0.1",
+    "tsc-watch": "^4.0.0",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.7.2"
   }
 }
