--- a/packages/frontend/public/manifest.json
+++ b/packages/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "CAKE",
+  "name": "스마트한 공간 사용의 시작, CAKE",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#FD7E14",
   "background_color": "#ffffff"
 }
