--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,10 +9,10 @@
     "lint": "tslint src/**/*.{ts,tsx} --fix"
   },
   "dependencies": {
-    "@types/react-router-dom": "^5.1.3",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-modal": "^3.11.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-switch-case": "^1.5.0",
@@ -22,6 +22,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-modal": "^3.10.0",
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.0",
     "tslint": "^5.20.1",
     "tslint-config-airbnb": "^5.11.2",
