--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
+    "react-pin-input": "^0.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-switch-case": "^1.5.0",
