--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
   "name": "cake-web",
   "devDependencies": {
-    "lerna": "^3.19.0"
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/mongoose": "^5.5.32",
+    "@types/morgan": "^1.7.37",
+    "@types/node": "^12.12.14",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-modal": "^3.10.0",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.0",
+    "lerna": "^3.19.0",
+    "nodemon": "^2.0.1",
+    "tsc-watch": "^4.0.0",
+    "tslint": "^5.20.1",
+    "tslint-config-airbnb": "^5.11.2",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.7.2"
+  },
+  "dependencies": {
+    "frontend": "file:packages/frontend",
+    "server": "file:packages/server"
   }
 }
