--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "lint": "tslint src/**/*.{ts,tsx} --fix"
+    "lint": "tslint src/**/*.{ts,tsx} --fix",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "node-sass": "^4.13.0",
@@ -33,5 +34,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "homepage": "https://junhoyeo.github.io/cake-web",
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
