--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,9 +11,18 @@
   "author": "JunhoYeo  <32605822+JunhoYeo@users.noreply.github.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.5",
+    "@types/request-promise-native": "^1.0.17",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^5.7.13",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "request-promise-native": "^1.0.8"
+  },
+  "devDependencies": {
+    "typescript": "^3.7.3"
   }
 }
