--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,12 +1,16 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es2019",
-    "noImplicitAny": true,
+    "module": "commonjs",
     "moduleResolution": "node",
+    "noImplicitAny": true,
+    "outDir": "dist",
+    "resolveJsonModule": true,
     "sourceMap": true,
-    "outDir": "dist"
+    "target": "es2019",
+    "types": [
+      "react"
+    ]
   },
   "include": [
     "src/**/*"
