--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,8 @@
   "license": "MIT",
   "dependencies": {
     "@types/jsonwebtoken": "^8.3.5",
+    "@types/passport": "^1.0.2",
+    "@types/passport-jwt": "^3.0.3",
     "@types/request-promise-native": "^1.0.17",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -20,6 +22,8 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.7.13",
     "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "request-promise-native": "^1.0.8"
   },
   "devDependencies": {
