--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "@types/express": "^4.17.2",
     "@types/mongoose": "^5.5.32",
     "@types/morgan": "^1.7.37",
-    "@types/node": "^12.12.14",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/node": "^12.12.16",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
     "@types/react-modal": "^3.10.0",
     "@types/react-router-dom": "^5.1.3",
-    "@types/styled-components": "^4.4.0",
+    "@types/styled-components": "^4.4.1",
+    "gh-pages": "^2.1.1",
     "lerna": "^3.19.0",
     "nodemon": "^2.0.1",
     "tsc-watch": "^4.0.0",
@@ -18,7 +19,7 @@
     "tslint-config-airbnb": "^5.11.2",
     "tslint-config-prettier": "^1.18.0",
     "tslint-react": "^4.1.0",
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.3"
   },
   "dependencies": {
     "frontend": "file:packages/frontend",
