--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -35,8 +35,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://cake.junhoyeo.xyz/",
-  "devDependencies": {
-    "gh-pages": "^2.1.1"
-  }
+  "homepage": "http://cake.junhoyeo.xyz/"
 }
