--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-switch-case": "^1.5.0",
+    "react-tooltip": "^3.11.1",
     "styled-components": "^4.4.1"
   },
   "eslintConfig": {
@@ -35,5 +36,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://cake.junhoyeo.xyz/"
+  "homepage": "http://cake.junhoyeo.xyz/",
+  "devDependencies": {
+    "@types/react-tooltip": "^3.11.0"
+  }
 }
