--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-modal": "^3.10.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-tooltip": "^3.11.0",
     "@types/styled-components": "^4.4.1",
     "gh-pages": "^2.1.1",
     "lerna": "^3.19.0",
@@ -23,6 +24,7 @@
   },
   "dependencies": {
     "frontend": "file:packages/frontend",
-    "server": "file:packages/server"
+    "server": "file:packages/server",
+    "tiramisu": "file:packages/tiramisu"
   }
 }
