--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "frontend": "file:packages/frontend",
     "server": "file:packages/server",
     "tiramisu": "file:packages/tiramisu",
