--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "typescript": "^3.7.3"
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "frontend": "file:packages/frontend",
     "server": "file:packages/server",
-    "tiramisu": "file:packages/tiramisu",
-    "unix-timestamp": "^0.2.0"
+    "tiramisu": "file:packages/tiramisu"
   }
 }
