--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,16 +10,18 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-modal": "^3.11.1",
     "react-pin-input": "^0.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.3.0",
     "react-switch-case": "^1.5.0",
     "react-tooltip": "^3.11.1",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "unix-timestamp": "^0.2.0"
   },
   "eslintConfig": {
     "extends": "react-app"
