--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -24,6 +24,11 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
-    "request-promise-native": "^1.0.8"
+    "request-promise-native": "^1.0.8",
+    "unix-timestamp": "^0.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.1",
+    "tsc-watch": "^4.0.0"
   }
 }
