--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -38,5 +38,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://cake.junhoyeo.xyz/"
+  "homepage": "http://cake.junhoyeo.xyz/",
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
+  }
 }
